force-app/main/default/objects/Research_Configuration__c/Research_Configuration__c.object-meta.xml
<CustomObject>
    <label>Research Configuration</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>