force-app/main/default/objects/Research_Configuration__c/fields/Approval_Code_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Code_Applied_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Code Applied Date</label>
    <type>Date</type>
</CustomField>