force-app/main/default/objects/Research_Configuration__c/fields/Max_Incentive_of_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Max_Incentive_of_Current_Year__c</fullName>
    <inlineHelpText>The maximum incentive is given to a  participant in this year.</inlineHelpText>
    <label>Max Incentive of Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>