force-app/main/default/objects/Research_Configuration__c/fields/Max_Number_Of_Participants_High_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_Of_Participants_High_Limit__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Max Number Of Survey Participants</description>
    <label>Max Number Of Survey Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>