force-app/main/default/objects/Research_Configuration__c/fields/Min_Number_Of_Participants_Low_Limit__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_Of_Participants_Low_Limit__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Min Number Of Participants Low Limit</description>
    <label>Min Number Of Participants Low Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>