force-app/main/default/objects/Research_Configuration__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <inlineHelpText>All US States</inlineHelpText>
    <label>States</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>